--- a/top_stories/halfweek/page1.html
+++ b/top_stories/halfweek/page1.html
@@ -215,19 +215,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://www.gnu.org/philosophy/open-source-misses-the-point.en.html">Why Open Source Misses the Point of Free Software (2016)</a>
+                                    <a href="https://www.bloomberg.com/news/articles/2018-06-04/github-billionaires-will-own-more-microsoft-stock-than-its-ceo">GitHub Founders Will Own More Microsoft Stock Than Its CEO</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17230785">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17234371">
                                         
-                                            158 comments
+                                            84 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=pera">pera</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528137811"
+                                            href="https://news.ycombinator.com/user?id=rattray">rattray</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528163828"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    223 points
+                                    91 points
                                 </span>
                             </td>
                         </tr>
@@ -299,7 +299,7 @@
                                             href="https://news.ycombinator.com/user?id=artsandsci">artsandsci</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1528136264"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    197 points
+                                    198 points
                                 </span>
                             </td>
                         </tr>
@@ -347,7 +347,7 @@
                                             href="https://news.ycombinator.com/user?id=gok">gok</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1528144914"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    126 points
+                                    127 points
                                 </span>
                             </td>
                         </tr>
@@ -419,7 +419,7 @@
                                             href="https://news.ycombinator.com/user?id=jhpriestley">jhpriestley</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1528142969"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    120 points
+                                    122 points
                                 </span>
                             </td>
                         </tr>
@@ -539,7 +539,7 @@
                                             href="https://news.ycombinator.com/user?id=zrail">zrail</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1528146295"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    98 points
+                                    100 points
                                 </span>
                             </td>
                         </tr>
@@ -563,7 +563,7 @@
                                             href="https://news.ycombinator.com/user?id=plonkus">plonkus</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1528144742"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    102 points
+                                    103 points
                                 </span>
                             </td>
                         </tr>
@@ -615,7 +615,7 @@
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
             &nbsp;&nbsp;
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528180803" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528181404" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
