--- a/jobs/index.html
+++ b/jobs/index.html
@@ -113,6 +113,20 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_hot_topic_title">
+                                    <a href="https://news.ycombinator.com/item?id=17234615" class="node"><i
+                                            class="fas fa-comment"></i></a>&nbsp;
+                                    <a href="https://status.icu/">HTTP Status as a Service</a>
+                                </span>
+                            </td>
+                        </tr>
+                    </table>
+                </div>
+                
+                <div class="cell">
+                    <table cellpadding="0" cellspacing="0" border="0" width="100%">
+                        <tr>
+                            <td width="auto" valign="middle">
+                                <span class="item_hot_topic_title">
                                     <a href="https://news.ycombinator.com/item?id=17227564" class="node"><i
                                             class="fas fa-comment"></i></a>&nbsp;
                                     <a href="https://www.podscripter.co/?ref=hn">Podscripter – Automated Transcription for Podcasters</a>
@@ -144,20 +158,6 @@
                                     <a href="https://news.ycombinator.com/item?id=17219101" class="node"><i
                                             class="fas fa-comment"></i></a>&nbsp;
                                     <a href="https://play.google.com/store/apps/details?id=me.aswinmohan.hacknews">A Hacker News Reader App with Tabs</a>
-                                </span>
-                            </td>
-                        </tr>
-                    </table>
-                </div>
-                
-                <div class="cell">
-                    <table cellpadding="0" cellspacing="0" border="0" width="100%">
-                        <tr>
-                            <td width="auto" valign="middle">
-                                <span class="item_hot_topic_title">
-                                    <a href="https://news.ycombinator.com/item?id=17215474" class="node"><i
-                                            class="fas fa-comment"></i></a>&nbsp;
-                                    <a href="https://www.verdaccio.org/">Verdaccio – Open-Source Lightweight private NPM proxy registry</a>
                                 </span>
                             </td>
                         </tr>
@@ -586,7 +586,7 @@
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
             &nbsp;&nbsp;
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528187403" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528188003" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
