--- a/top_stories/week/page2.html
+++ b/top_stories/week/page2.html
@@ -215,19 +215,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://threadreaderapp.com/thread/1002103360646823936.html">How to get rich without getting lucky</a>
+                                    <a href="https://github.com/OpenDUNE/OpenDUNE">OpenDUNE – An open-source recreation of the game Dune II</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17203304">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17214320">
                                         
-                                            501 comments
+                                            132 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=madmax108">madmax108</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1527838002"
+                                            href="https://news.ycombinator.com/user?id=mariuz">mariuz</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1527943469"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    638 points
+                                    446 points
                                 </span>
                             </td>
                         </tr>
@@ -269,7 +269,7 @@
                                 <span class="small fade">
                                     <a class="node" href="https://news.ycombinator.com/item?id=17217815">
                                         
-                                            170 comments
+                                            172 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=thibaut_barrere">thibaut_barrere</a></strong> &nbsp;•&nbsp;
@@ -615,7 +615,7 @@
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
             &nbsp;&nbsp;
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528188003" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528188605" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
