--- a/top_stories/halfweek/page6.html
+++ b/top_stories/halfweek/page6.html
@@ -431,19 +431,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://www.joshwcomeau.com/posts/dynamic-bezier-curves">Dynamic Bézier Curves</a>
+                                    <a href="https://www.vox.com/science-and-health/2018/5/31/17344406/crispr-mosquito-malaria-gene-drive-editing-target-africa-regulation-gmo">The debate over whether to use genetically modified mosquitoes to fight malaria</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17213685">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17214676">
                                         
-                                            5 comments
+                                            91 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=based2">based2</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1527930991"
+                                            href="https://news.ycombinator.com/user?id=fluxic">fluxic</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1527949094"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    92 points
+                                    83 points
                                 </span>
                             </td>
                         </tr>
@@ -492,7 +492,7 @@
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
             &nbsp;&nbsp;
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528189803" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528190404" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
