--- a/top_stories/halfweek/page2.html
+++ b/top_stories/halfweek/page2.html
@@ -227,7 +227,7 @@
                                             href="https://news.ycombinator.com/user?id=devy">devy</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1528142786"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    119 points
+                                    120 points
                                 </span>
                             </td>
                         </tr>
@@ -485,7 +485,7 @@
                                 <span class="small fade">
                                     <a class="node" href="https://news.ycombinator.com/item?id=17225599">
                                         
-                                            211 comments
+                                            213 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=okket">okket</a></strong> &nbsp;•&nbsp;
@@ -551,19 +551,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://www.cjr.org/special_report/seymour-hersh-monday-interview.php/">Seymour Hersh on spies, state secrets, and the stories he doesn’t tell</a>
+                                    <a href="https://github.com/OpenDUNE/OpenDUNE">OpenDUNE – An open-source recreation of the game Dune II</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17231493">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17214320">
                                         
-                                            72 comments
+                                            132 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=daddy_drank">daddy_drank</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528141343"
+                                            href="https://news.ycombinator.com/user?id=mariuz">mariuz</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1527943469"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    90 points
+                                    446 points
                                 </span>
                             </td>
                         </tr>
@@ -615,7 +615,7 @@
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
             &nbsp;&nbsp;
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528191003" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528191604" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
