--- a/top_stories/week/page5.html
+++ b/top_stories/week/page5.html
@@ -215,19 +215,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="http://bradfrost.com/blog/link/replacing-jquery-with-vue-js-no-build-step-necessary/">React is the new jQuery</a>
+                                    <a href="https://adguard.com/en/blog/goodbye-amazon/">Amazon follows Google and Apple and bans system-wide ad blockers on app store</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17211283">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17196888">
                                         
-                                            197 comments
+                                            291 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=brennankreiman">brennankreiman</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1527894417"
+                                            href="https://news.ycombinator.com/user?id=ameshkov">ameshkov</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1527779559"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    222 points
+                                    310 points
                                 </span>
                             </td>
                         </tr>
@@ -615,7 +615,7 @@
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
             &nbsp;&nbsp;
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528193403" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528194005" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
