--- a/top_stories/halfweek/page4.html
+++ b/top_stories/halfweek/page4.html
@@ -215,19 +215,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://www.gamasutra.com/view/news/318588/The_great_video_game_exodus.php">The great video game exodus</a>
+                                    <a href="https://professorwerner.org/shifting-from-central-planning-to-a-decentralised-economy-do-we-need-central-banks/">Do We Need Central Banks? (2017)</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17217081">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17225327">
                                         
-                                            138 comments
+                                            164 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=smacktoward">smacktoward</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1527983596"
+                                            href="https://news.ycombinator.com/user?id=mendelsd">mendelsd</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528096658"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    259 points
+                                    120 points
                                 </span>
                             </td>
                         </tr>
@@ -615,7 +615,7 @@
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
             &nbsp;&nbsp;
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528194005" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528194604" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
