--- a/top_stories/week/page5.html
+++ b/top_stories/week/page5.html
@@ -263,19 +263,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://landgreen.github.io/physics/index.html">High school physics course notes, with JavaScript simulations</a>
+                                    <a href="http://bradfrost.com/blog/link/replacing-jquery-with-vue-js-no-build-step-necessary/">React is the new jQuery</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17178031">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17211283">
                                         
-                                            64 comments
+                                            197 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=lilgreenland">lilgreenland</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1527592246"
+                                            href="https://news.ycombinator.com/user?id=brennankreiman">brennankreiman</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1527894417"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    445 points
+                                    222 points
                                 </span>
                             </td>
                         </tr>
@@ -615,7 +615,7 @@
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
             &nbsp;&nbsp;
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528197004" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528197605" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
