--- a/top_stories/daily/page3.html
+++ b/top_stories/daily/page3.html
@@ -251,7 +251,7 @@
                                             href="https://news.ycombinator.com/user?id=kristianp">kristianp</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1528175721"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    36 points
+                                    37 points
                                 </span>
                             </td>
                         </tr>
@@ -503,19 +503,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://gizmodo.com/homeland-security-wants-to-build-an-online-media-influe-1825060190">US Government Is Building a 'Media Influence Database' to Track Journalists</a>
+                                    <a href="https://worldbuilding.stackexchange.com/questions/114033/how-can-santa-keep-his-lists-when-gdpr-is-around">Is Santa Claus GDPR Compliant?</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17234526">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17235949">
                                         
-                                            4 comments
+                                            3 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=dpatru">dpatru</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528166269"
+                                            href="https://news.ycombinator.com/user?id=ForHackernews">ForHackernews</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528188607"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    29 points
+                                    11 points
                                 </span>
                             </td>
                         </tr>
@@ -551,19 +551,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="http://pouzinsociety.org/node/47">Why removing the TCP pseudo-header doesn't help mobility</a>
+                                    <a href="https://gizmodo.com/homeland-security-wants-to-build-an-online-media-influe-1825060190">US Government Is Building a 'Media Influence Database' to Track Journalists</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17235056">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17234526">
                                         
-                                            2 comments
+                                            4 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=signa11">signa11</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528173846"
+                                            href="https://news.ycombinator.com/user?id=dpatru">dpatru</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528166269"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    22 points
+                                    29 points
                                 </span>
                             </td>
                         </tr>
@@ -615,7 +615,7 @@
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
             &nbsp;&nbsp;
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528201203" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528201804" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
