--- a/top_stories/week/page6.html
+++ b/top_stories/week/page6.html
@@ -215,19 +215,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://laughingsquid.com/romeo-juliet-recited-in-original-shakespeare-accent/">Opening of Romeo and Juliet Recited in the Accent of Shakespeare’s Time [video]</a>
+                                    <a href="https://www.bloomberg.com/news/features/2018-05-24/how-not-to-negotiate-a-6-1-billion-deal">How Not to Negotiate a $6.1B Deal</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17196270">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17199860">
                                         
-                                            107 comments
+                                            96 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=hellofunk">hellofunk</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1527774648"
+                                            href="https://news.ycombinator.com/user?id=dpflan">dpflan</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1527798138"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    241 points
+                                    222 points
                                 </span>
                             </td>
                         </tr>
@@ -492,7 +492,7 @@
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
             &nbsp;&nbsp;
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528202404" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528203003" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
