--- a/top_stories/week/page2.html
+++ b/top_stories/week/page2.html
@@ -551,19 +551,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="http://www.businessinsider.com/2-billion-startup-github-could-be-for-sale-microsoft-2018-5">Microsoft and GitHub have held acquisition talks</a>
+                                    <a href="https://zachholman.com/talk/utc-is-enough-for-everyone-right">UTC Is Enough for Everyone, Right?</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17208293">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17181046">
                                         
-                                            547 comments
+                                            304 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=coloneltcb">coloneltcb</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1527876717"
+                                            href="https://news.ycombinator.com/user?id=bpierre">bpierre</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1527613849"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    423 points
+                                    752 points
                                 </span>
                             </td>
                         </tr>
@@ -615,7 +615,7 @@
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
             &nbsp;&nbsp;
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528214406" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528215005" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
