--- a/top_stories/halfweek/page6.html
+++ b/top_stories/halfweek/page6.html
@@ -215,19 +215,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://twitter.com/sandofsky/status/1002637340291018754">Facebook moving away from React Native?</a>
+                                    <a href="https://towardsdatascience.com/the-10-statistical-techniques-data-scientists-need-to-master-1ef6dbd531f7">Statistical Techniques Data Scientists Need to Master</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17216628">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17220325">
                                         
-                                            70 comments
+                                            20 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=mpweiher">mpweiher</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1527976844"
+                                            href="https://news.ycombinator.com/user?id=lobo_tuerto">lobo_tuerto</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528043592"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    156 points
+                                    115 points
                                 </span>
                             </td>
                         </tr>
@@ -492,7 +492,7 @@
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
             &nbsp;&nbsp;
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528225805" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528226404" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
