--- a/top_stories/daily/page5.html
+++ b/top_stories/daily/page5.html
@@ -215,19 +215,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://www.reddit.com/r/security/comments/8ofiiw/chinese_border_police_installed_software_on_my/">A Reddit user claims the Chinese Government installed malware on their phone</a>
+                                    <a href="https://www.github.com/fraudmarc/fraudmarc-ce/">Techstars startup: Open-source and serverless DMARC report analysis system</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17234124">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17238996">
                                         
-                                            comments
+                                            3 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=ReverseCold">ReverseCold</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528160505"
+                                            href="https://news.ycombinator.com/user?id=kcolemangt">kcolemangt</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528214686"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    35 points
+                                    8 points
                                 </span>
                             </td>
                         </tr>
@@ -443,7 +443,7 @@
                                             href="https://news.ycombinator.com/user?id=mathgenius">mathgenius</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1528160050"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    21 points
+                                    22 points
                                 </span>
                             </td>
                         </tr>
@@ -615,7 +615,7 @@
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
             &nbsp;&nbsp;
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528230605" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528231203" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
