--- a/top_stories/daily/page6.html
+++ b/top_stories/daily/page6.html
@@ -215,6 +215,30 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
+                                    <a href="https://www.technologynetworks.com/neuroscience/news/the-ideal-road-not-taken-the-haunting-regrets-of-failing-our-ideal-selves-304536">Psychologist Says “Just Do It” as Research Shows You Will Regret It If You Don't</a>
+                                </span>
+                                <div class="sep5"></div>
+                                <span class="small fade">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17233538">
+                                        
+                                            1 comments
+                                        </a> &nbsp;•&nbsp;
+                                    <strong><a
+                                            href="https://news.ycombinator.com/user?id=brahmwg">brahmwg</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528154441"
+                                       class="submissionTimestamp"></a> &nbsp;•&nbsp;
+                                    16 points
+                                </span>
+                            </td>
+                        </tr>
+                    </table>
+                </div>
+                
+                <div class="cell item" style="">
+                    <table cellpadding="0" cellspacing="0" border="0" width="100%">
+                        <tr>
+                            <td width="auto" valign="middle">
+                                <span class="item_title">
                                     <a href="http://www.jcwolfram.de/projekte/mxe11_en/main.php">MXE11: run Unix on a microcontroller</a>
                                 </span>
                                 <div class="sep5"></div>
@@ -420,7 +444,7 @@
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
             &nbsp;&nbsp;
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528231203" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528231804" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
