--- a/top_stories/halfweek/page5.html
+++ b/top_stories/halfweek/page5.html
@@ -215,19 +215,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://www.cjr.org/special_report/seymour-hersh-monday-interview.php/">Seymour Hersh on spies, state secrets, and the stories he doesn’t tell</a>
+                                    <a href="https://phys.org/news/2018-06-team-microbes-survive-rooms-contaminate.html">How microbes survive clean rooms and contaminate spacecraft</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17231493">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17218831">
                                         
-                                            87 comments
+                                            63 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=daddy_drank">daddy_drank</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528141343"
+                                            href="https://news.ycombinator.com/user?id=dnetesn">dnetesn</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528020146"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    93 points
+                                    223 points
                                 </span>
                             </td>
                         </tr>
@@ -615,7 +615,7 @@
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
             &nbsp;&nbsp;
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528232404" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528233004" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
