--- a/top_stories/halfweek/page6.html
+++ b/top_stories/halfweek/page6.html
@@ -215,19 +215,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://twitter.com/sandofsky/status/1002637340291018754">Facebook moving away from React Native?</a>
+                                    <a href="https://www.researchgate.net/profile/Phil_Bierwirth/publication/311844520_Carbon_dioxide_toxicity_and_climate_change_a_serious_unapprehended_risk_for_human_health/links/5a7586c645851541ce56e37e/Carbon-dioxide-toxicity-and-climate-change-a-serious-unapprehended-risk-for-human-health.pdf?origin=publication_detail">Carbon dioxide toxicity and climate change: a serious unapprehended risk</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17216628">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17221239">
                                         
-                                            70 comments
+                                            88 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=mpweiher">mpweiher</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1527976844"
+                                            href="https://news.ycombinator.com/user?id=graeme">graeme</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528053882"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    157 points
+                                    112 points
                                 </span>
                             </td>
                         </tr>
@@ -492,7 +492,7 @@
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
             &nbsp;&nbsp;
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528236004" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528236604" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
