--- a/top_stories/halfweek/page2.html
+++ b/top_stories/halfweek/page2.html
@@ -227,7 +227,7 @@
                                             href="https://news.ycombinator.com/user?id=mpweiher">mpweiher</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1528186499"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    153 points
+                                    155 points
                                 </span>
                             </td>
                         </tr>
@@ -335,19 +335,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://nancysbraintalks.mit.edu/course/9-11-the-human-brain">MIT 9.11: The Human Brain (Spring 2018)</a>
+                                    <a href="https://www.theverge.com/circuitbreaker/2018/6/5/17428806/samsung-chromebook-plus-linux-app-support-beta-launched">Samsung’s Chromebook Plus now supports Linux apps</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17216634">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17237183">
                                         
-                                            67 comments
+                                            46 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=indescions_2018">indescions_2018</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1527976883"
+                                            href="https://news.ycombinator.com/user?id=artsandsci">artsandsci</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528203401"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    692 points
+                                    94 points
                                 </span>
                             </td>
                         </tr>
@@ -413,7 +413,7 @@
                                 <span class="small fade">
                                     <a class="node" href="https://news.ycombinator.com/item?id=17229940">
                                         
-                                            145 comments
+                                            146 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=thefilmore">thefilmore</a></strong> &nbsp;•&nbsp;
@@ -443,7 +443,7 @@
                                             href="https://news.ycombinator.com/user?id=jchadhowell">jchadhowell</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1528193413"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    102 points
+                                    104 points
                                 </span>
                             </td>
                         </tr>
@@ -563,7 +563,7 @@
                                             href="https://news.ycombinator.com/user?id=rinze">rinze</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1528065930"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    368 points
+                                    369 points
                                 </span>
                             </td>
                         </tr>
@@ -615,7 +615,7 @@
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
             &nbsp;&nbsp;
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528236004" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528236604" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
