--- a/top_stories/week/page2.html
+++ b/top_stories/week/page2.html
@@ -99,6 +99,20 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_hot_topic_title">
+                                    <a href="https://news.ycombinator.com/item?id=17242136" class="node"><i
+                                            class="fas fa-comment"></i></a>&nbsp;
+                                    <a href="https://www.feram.io/blog/2018-06-05_transity_the_future_of_plain_text_accounting/">Transity – Plain Text Accounting</a>
+                                </span>
+                            </td>
+                        </tr>
+                    </table>
+                </div>
+                
+                <div class="cell">
+                    <table cellpadding="0" cellspacing="0" border="0" width="100%">
+                        <tr>
+                            <td width="auto" valign="middle">
+                                <span class="item_hot_topic_title">
                                     <a href="https://news.ycombinator.com/item?id=17226225" class="node"><i
                                             class="fas fa-comment"></i></a>&nbsp;
                                     <a href="https://bithublab.org/">BitHubLab, Search for projects on all the major Git platforms</a>
@@ -116,20 +130,6 @@
                                     <a href="https://news.ycombinator.com/item?id=17227564" class="node"><i
                                             class="fas fa-comment"></i></a>&nbsp;
                                     <a href="https://www.podscripter.co/?ref=hn">Podscripter – Automated Transcription for Podcasters</a>
-                                </span>
-                            </td>
-                        </tr>
-                    </table>
-                </div>
-                
-                <div class="cell">
-                    <table cellpadding="0" cellspacing="0" border="0" width="100%">
-                        <tr>
-                            <td width="auto" valign="middle">
-                                <span class="item_hot_topic_title">
-                                    <a href="https://news.ycombinator.com/item?id=17234615" class="node"><i
-                                            class="fas fa-comment"></i></a>&nbsp;
-                                    <a href="https://status.icu/">HTTP Status as a Service</a>
                                 </span>
                             </td>
                         </tr>
@@ -615,7 +615,7 @@
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
             &nbsp;&nbsp;
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528249803" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528250404" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
