--- a/top_stories/halfweek/page1.html
+++ b/top_stories/halfweek/page1.html
@@ -215,19 +215,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://stratechery.com/2018/the-cost-of-developers/">The Cost of Developers</a>
+                                    <a href="https://aws.amazon.com/blogs/aws/amazon-eks-now-generally-available/">Amazon EKS – Now Generally Available</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17236187">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17240369">
                                         
-                                            205 comments
+                                            113 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=djug">djug</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528192020"
+                                            href="https://news.ycombinator.com/user?id=jacobwg">jacobwg</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528221891"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    364 points
+                                    180 points
                                 </span>
                             </td>
                         </tr>
@@ -239,19 +239,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://aws.amazon.com/blogs/aws/amazon-eks-now-generally-available/">Amazon EKS – Now Generally Available</a>
+                                    <a href="https://www.gatesnotes.com/About-Bill-Gates/My-gift-to-college-graduates?WT.mc_id=06_05_2018_08_FactfulnessGift_BG-TW_&WT.tsrc=BGTW&linkId=52604752">Bill Gates is giving Factfulness to those getting a degree from a U.S. college</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17240369">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17241446">
                                         
-                                            112 comments
+                                            65 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=jacobwg">jacobwg</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528221891"
+                                            href="https://news.ycombinator.com/user?id=Balgair">Balgair</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528228639"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    179 points
+                                    139 points
                                 </span>
                             </td>
                         </tr>
@@ -299,7 +299,7 @@
                                             href="https://news.ycombinator.com/user?id=encorekt">encorekt</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1528206065"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    231 points
+                                    232 points
                                 </span>
                             </td>
                         </tr>
@@ -323,7 +323,7 @@
                                             href="https://news.ycombinator.com/user?id=bpierre">bpierre</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1528227063"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    122 points
+                                    124 points
                                 </span>
                             </td>
                         </tr>
@@ -347,7 +347,7 @@
                                             href="https://news.ycombinator.com/user?id=leephillips">leephillips</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1528199656"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    251 points
+                                    254 points
                                 </span>
                             </td>
                         </tr>
@@ -615,7 +615,7 @@
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
             &nbsp;&nbsp;
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528251004" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528251604" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
