--- a/top_stories/daily/page3.html
+++ b/top_stories/daily/page3.html
@@ -215,19 +215,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://gitlab.com/yegortimoshenko/copperhead-takeover/blob/master/CopperheadOS%20Twitter%2005-06-18.txt">CopperheadOS is undergoing a company takeover</a>
+                                    <a href="https://www.pcmag.com/news/361581/apple-now-allows-free-trials-for-ios-apps?amp=1">Apple Now Allows Free Trials for iOS Apps</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17239259">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17242718">
                                         
-                                            68 comments
+                                            2 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=yegortimoshenko">yegortimoshenko</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528215964"
+                                            href="https://news.ycombinator.com/user?id=MBCook">MBCook</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528238413"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    59 points
+                                    25 points
                                 </span>
                             </td>
                         </tr>
@@ -323,7 +323,7 @@
                                             href="https://news.ycombinator.com/user?id=johnshades">johnshades</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1528237428"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    22 points
+                                    23 points
                                 </span>
                             </td>
                         </tr>
@@ -389,7 +389,7 @@
                                 <span class="small fade">
                                     <a class="node" href="https://news.ycombinator.com/item?id=17240533">
                                         
-                                            11 comments
+                                            13 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=tosh">tosh</a></strong> &nbsp;•&nbsp;
@@ -443,7 +443,7 @@
                                             href="https://news.ycombinator.com/user?id=Qub3d">Qub3d</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1528230613"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    28 points
+                                    29 points
                                 </span>
                             </td>
                         </tr>
@@ -615,7 +615,7 @@
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
             &nbsp;&nbsp;
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528254603" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528255204" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
