--- a/top_stories/week/page2.html
+++ b/top_stories/week/page2.html
@@ -215,19 +215,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="http://www.collaborativefund.com/blog/the-psychology-of-money/">The Psychology of Money</a>
+                                    <a href="https://akr.am/blog/posts/gitlab-isnt-really-open-source">GitLab Isn’t Really Open-Source</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17221379">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17229940">
                                         
-                                            112 comments
+                                            148 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=dsr12">dsr12</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528055363"
+                                            href="https://news.ycombinator.com/user?id=thefilmore">thefilmore</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528132632"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    418 points
+                                    256 points
                                 </span>
                             </td>
                         </tr>
@@ -615,7 +615,7 @@
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
             &nbsp;&nbsp;
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528254603" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528255204" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
