--- a/top_stories/week/page4.html
+++ b/top_stories/week/page4.html
@@ -551,19 +551,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://www.spinics.net/lists/linux-crypto/msg33291.html">Linux Cryptography: Speck's real standing with the academic community</a>
+                                    <a href="https://actix.rs/">Actix: a small, pragmatic, and fast Rust web framework</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17214827">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17190705">
                                         
-                                            108 comments
+                                            123 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=zx2c4">zx2c4</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1527951245"
+                                            href="https://news.ycombinator.com/user?id=fafhrd91">fafhrd91</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1527707401"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    224 points
+                                    399 points
                                 </span>
                             </td>
                         </tr>
@@ -615,7 +615,7 @@
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
             &nbsp;&nbsp;
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528263005" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528263605" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
