--- a/top_stories/halfweek/page4.html
+++ b/top_stories/halfweek/page4.html
@@ -419,7 +419,7 @@
                                             href="https://news.ycombinator.com/user?id=sudouser">sudouser</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1528044255"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    254 points
+                                    255 points
                                 </span>
                             </td>
                         </tr>
@@ -551,19 +551,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://www.bloomberg.com/news/articles/2018-06-04/github-billionaires-will-own-more-microsoft-stock-than-its-ceo">GitHub Founders Will Own More Microsoft Stock Than Its CEO</a>
+                                    <a href="https://developer.apple.com/documentation/mapkitjs">MapKit JS – Embed interactive Apple maps on your website</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17234371">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17232169">
                                         
-                                            110 comments
+                                            25 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=rattray">rattray</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528163828"
+                                            href="https://news.ycombinator.com/user?id=plonkus">plonkus</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528144742"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    106 points
+                                    125 points
                                 </span>
                             </td>
                         </tr>
@@ -615,7 +615,7 @@
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
             &nbsp;&nbsp;
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528270205" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528270803" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
